# user-management/swagger.json
@@ -176,5 +176,10 @@
         }
       }
     }
+  },
+  "securityDefinitions": {
+    "BasicAuth": {
+      "type": "basic"
+    }
   }
 }
